modification lien du boutton

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<a href="index.html">Accueil</a>
 						</li>
 						<li>					
-							<a href="page2.html">Information</a>
+							<a href="page2.html#form">Information</a>
 						</li>
 					</ul>
 				</div>
@@ -66,7 +66,7 @@
 					LA CHOUETTE AGENCE DESIGN WEB
 				</h1>
 				<div class="text-center">
-					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="page2.html#form" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
