Modification image avec texte par h2

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h2>Nous Travaillons avec beaucoup de clients,voici nos réaliations.</h2> 
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -217,7 +217,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<p class="text-center white">
-						La chouette agence - Agence web basée à Lyon.<br>
+						La chouette agence - Agence web basée à Lyon.
 					</p>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
@@ -240,7 +240,7 @@
 								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
-						<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+						
 					</div>
 					<div class="row">
 						<div class="col-sm-4">
