--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
+					<h2 class="text-center white">
 						La chouette agence - Agence web basée à Lyon.
-					</p>
+					</h2>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
