Test modifier  font footer

--- a/index.html
+++ b/index.html
@@ -222,22 +222,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span>Twitter</a>
+								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span> </a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span>Facebook</a>
+								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span>Dibble</a>
+								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span>Instagram</a>
+								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span> </a>
 							</div>
 						</div>
 						
@@ -254,7 +254,7 @@
 						<div class="col-sm-4">
 							
 							<ul>
-								<li><a href="mailto:design@gmail.com">Contact:Agence la choutte</a></li>
+								<li>Contact:<a href="mailto:design@gmail.com" class="link"><br>Agence la choutte</a></li>
 							</ul>
 						</div>
 						<div class="col-sm-4">
