Modification constrate footer

--- a/index.html
+++ b/index.html
@@ -222,22 +222,23 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span> </a>
+								<a class="social" href="#"><span class="fa fa-twitter icon-md"></span><br><span class="link">Twitter</span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="#"><span class="fa fa-facebook icon-md"></span><br><span class="link">facebook</span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="#"><span class="fa fa-dribbble icon-md"></span><br><span class="link">Dibble</span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span> </a>
+								<a class="social" href="#"><span class="fa fa-instagram icon-md"></span><br><span class="link">Instagram</span>
+								 </a>
 							</div>
 						</div>
 						
@@ -254,7 +255,7 @@
 						<div class="col-sm-4">
 							
 							<ul>
-								<li>Contact:<a href="mailto:design@gmail.com" class="link"><br>Agence la choutte</a></li>
+								<li>Contact:<a href="mailto:design@gmail.com"><br><span class="link">Agence la choutte</span></a></li>
 							</ul>
 						</div>
 						<div class="col-sm-4">
