Ajout classe active et une transition

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 						<div class="col-sm-4">
 							
 							<ul>
-								<li>Contact:<a href="mailto:design@gmail.com"><br><span class="link">Agence la choutte</span></a></li>
+								<li>Contact:<a href="mailto:design@gmail.com"><br><span class="link active">Agence la choutte</span></a></li>
 							</ul>
 						</div>
 						<div class="col-sm-4">
