Suprimer des erreurs de syntaxe dans le fichier style.css

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" role="banniere">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -119,12 +119,12 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<p>"<strong>La chouette agence</strong> est une excellente agenge web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à lyon."<br>Maxime Guibard,PDG de A vos fourchettes</p>
 
 			</div>
 		</div>
 	</div>
-</section>>
+</section>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
