Deplacement js avant la fermeture de body

--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/font-awesome.css"> -->
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js" async></script>
-	<script src="./js/bootstrap.js" async></script>
-	<script src="./js/blocs.js" async></script>
-	<script src="./js/jquery.touchSwipe.js"  async></script>
-	<script src="./js/gmaps.js" async></script>
-
+	
     <title>Agence Webdesign Lyon : graphisme UI, UX, Mobile First | chouette</title>    
 <!-- Analytics --> 
 <!-- Analytics END -->    
@@ -51,7 +46,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" role="banniere">
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" role="banner">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -257,6 +252,12 @@
 	</footer>
 <!-- Footer - bloc-8 END -->
 </div>
-<!-- Principal conteneur END -->   
+<!-- Principal conteneur END -->  
+<script src="./js/jquery-2.1.0.js" async></script>
+	<script src="./js/bootstrap.js" async></script>
+	<script src="./js/blocs.js" async></script>
+	<script src="./js/jquery.touchSwipe.js"  async></script>
+	<script src="./js/gmaps.js" async></script>
+ 
 </body>
 </html>
