modification lien header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<a href="index.html">Accueil</a>
 						</li>
 						<li>					
-							<a href="page2.html#form">Information</a>
+							<a href="page2.html">Information</a>
 						</li>
 					</ul>
 				</div>
@@ -258,6 +258,6 @@
 	<script src="./js/blocs.js" async></script>
 	<script src="./js/jquery.touchSwipe.js"  async></script>
 	<script src="./js/gmaps.js" async></script>
- 
+
 </body>
 </html>
