--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<a href="index.html">Accueil</a>
 						</li>
 						<li>					
-							<a href="page2.html">Information</a>
+							<a href="information.html">Information</a>
 						</li>
 					</ul>
 				</div>
