--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="container bloc-sm">
 			<nav class="navbar row">
 				<div class="navbar-header">				
-					<a class="navbar-brand" href="#"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>			
+					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>			
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 					</button>
@@ -36,7 +36,7 @@
 							<a href="index.html">Accueil</a>
 						</li>
 						<li>					
-							<a href="information.html">Information</a>
+							<a href="information.html">Inscription</a>
 						</li>
 					</ul>
 				</div>
